syntax = "proto3";

package calculator;
option go_package = "pkg/calculatorpb";

message calc {
    int32 x = 1;
    int32 y = 2;
}

message CalcRequest {
    calc calc = 1;
}

message CalcResult {
    int32 value = 1;
}

service CalculatorService {
    rpc Sum (CalcRequest) returns (CalcResult);
    rpc Multiply (CalcRequest) returns (CalcResult);
}


message Version {
    string version = 1;
    string revision = 2;
    string project_name = 3;
}

message VersionRequest {}

message VersionResponse {
    Version version = 1;
}

service VersionService {
    rpc GetVersion (VersionRequest) returns (VersionResponse);
}
